# plausible_exoplanets

./: .gitignore  CLAUDE.md  Makefile  README.md  SKILLS.md  pyproject.toml
analysis/: grid_inference.py  grid_surface.py  grid_sweep.py  grid_topup.py  mixture_inference.py  mixture_sweep.py  paper_figures.py  phase1_validation_plots.py  phase2_fiducial_check.py  robustness.py
data/: PROVENANCE.md
docs/: OBSERVATORIES.md  checkpoint4_results.md  index.html  paper.html  phase0_audit.md  phase2_design.md  prior_art_syssim.md  robustness_plan.md  sigma_r_note.md
paper/: dichotomy_section.md
results/: grid_inference.json  grid_surface.json  mixture_inference.json  robustness.json
results/grid/: axes.json  cell_sr0.05_si0.5_m0.json  cell_sr0.05_si0.5_m1.json  cell_sr0.05_si0.5_m2.json  cell_sr0.05_si0.87_m0.json  cell_sr0.05_si0.87_m1.json  cell_sr0.05_si0.87_m2.json  cell_sr0.05_si1.5_m0.json  cell_sr0.05_si1.5_m1.json  cell_sr0.05_si1.5_m2.json  cell_sr0.05_si13.7_m0.json  cell_sr0.05_si13.7_m1.json  cell_sr0.05_si13.7_m2.json  cell_sr0.05_si2.6_m0.json  cell_sr0.05_si2.6_m1.json  cell_sr0.05_si2.6_m2.json  cell_sr0.05_si24.0_m0.json  cell_sr0.05_si24.0_m1.json  cell_sr0.05_si24.0_m2.json  cell_sr0.05_si4.5_m0.json  cell_sr0.05_si4.5_m1.json  cell_sr0.05_si4.5_m2.json  cell_sr0.05_si7.9_m0.json  cell_sr0.05_si7.9_m1.json  cell_sr0.05_si7.9_m2.json  cell_sr0.093_si0.5_m0.json  cell_sr0.093_si0.5_m1.json  (+2638 more)
tests/: test_architecture.py  test_dichotomy.py  test_kepler_data.py  test_kepler_field.py  test_phase2.py  test_phase3.py  test_physics.py  test_pipeline.py
(+3655 files in other folders)
