[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exoverse"
version = "0.1.0"
description = "Procedurally generated, physics-validated exoplanetary systems with transit observability modeling"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "flask>=3.0"]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7", "matplotlib>=3.7"]

[project.scripts]
exoverse = "exoverse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exoverse = ["web/templates/*.html"]
